--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </dependencies>
 
 <properties>
-    <start-class>hello.Application</start-class>
+    <start-class>nine.Application</start-class>
 </properties>
 
 <build>
